Small fixes - allow image/jpeg mime type in addition to image/jpg - adds word-wrap to filenames

--- a/src/App.css
+++ b/src/App.css
@@ -137,6 +137,9 @@ a {
   justify-content: space-between;
   word-wrap: break-word;
 }
+.file-record div {
+  max-width: 50%;
+}
 .add-button,.edit-buttons-container {
   grid-area: 1 / 1 / 2 / 2;
 }
